--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -2,18 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.newpc.qrcode">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CaptureActivityPotrait"
+        <activity
+            android:name=".CaptureActivityPotrait"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
             android:theme="@style/zxing_CaptureTheme"
-            android:windowSoftInputMode="stateAlwaysHidden">
-        </activity>
+            android:windowSoftInputMode="stateAlwaysHidden"></activity>
         <activity android:name=".ReaderActivity">
             <intent-filter>
                 <action android:name="android.intent.action.RUN" />
@@ -27,9 +31,22 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
+        </activity>
+        <activity android:name=".createDialog"
+            android:theme="@style/CustomDialogTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.RUN" />
+            </intent-filter>
         </activity>
 
+        <service
+            android:name=".RedirectService"
+            android:exported="false"></service>
+        <receiver android:name=".RedirectReceiver" android:enabled="true" android:exported="false">
+            <intent-filter>
+                <action android:name="com.example.newpc.qrcode.MESSAGE_VIA_INTENT"></action>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
