Changes Made - Added encryption and decryption support - Fixed reading from image Gallery - Added QrCode Generator with and without password.

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -31,6 +31,13 @@
             android:theme="@style/zxing_CaptureTheme"
             android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
+        <activity android:name=".GeneratorActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.RUN"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
         <activity android:name=".ReaderActivity">
             <intent-filter>
                 <action android:name="android.intent.action.RUN" />
